[gd_scene load_steps=23 format=3 uid="uid://cu1hpj2tp7t07"]

[ext_resource type="Script" uid="uid://dbr8vemqcj8q5" path="res://minijeux/vending-machine/vending-machine.gd" id="1_5b50y"]
[ext_resource type="Script" uid="uid://drgrgoiakjvts" path="res://minijeux/minijeu.gd" id="1_trghe"]
[ext_resource type="Texture2D" uid="uid://fmyqxoj7ejv3" path="res://minijeux/vending-machine/vending machine avec z√©ro .png" id="2_lb8ce"]
[ext_resource type="FontFile" uid="uid://cigeyuoqi8sct" path="res://minijeux/vending-machine/Galaxy_dingbats-Regular.ttf" id="3_4hr0v"]
[ext_resource type="AudioStream" uid="uid://bftt8lqx3m5xf" path="res://minijeux/vending-machine/vending_machine.wav" id="3_5b50y"]
[ext_resource type="AudioStream" uid="uid://4if6ushltgv" path="res://minijeux/vending-machine/erreur.mp3" id="4_d3eid"]
[ext_resource type="AudioStream" uid="uid://3jx8hjbhvckh" path="res://minijeux/vending-machine/chiffres/Chiffres-0.wav" id="6_wt08n"]
[ext_resource type="AudioStream" uid="uid://bisu4s6xmfreq" path="res://minijeux/vending-machine/chiffres/Chiffres-1.wav" id="7_45jr6"]
[ext_resource type="AudioStream" uid="uid://cofg01lfiaadn" path="res://minijeux/vending-machine/chiffres/Chiffres-2.wav" id="8_yylxx"]
[ext_resource type="AudioStream" uid="uid://dy682r18vhdt" path="res://minijeux/vending-machine/chiffres/Chiffres-3.wav" id="9_trghe"]
[ext_resource type="AudioStream" uid="uid://c2devx01oke7c" path="res://minijeux/vending-machine/chiffres/Chiffres-4.wav" id="10_hkba5"]
[ext_resource type="AudioStream" uid="uid://dyi88eua4rjd5" path="res://minijeux/vending-machine/chiffres/Chiffres-5.wav" id="11_623a3"]
[ext_resource type="AudioStream" uid="uid://x4qxyuurp3n6" path="res://minijeux/vending-machine/chiffres/Chiffres-6.wav" id="12_awdpl"]
[ext_resource type="AudioStream" uid="uid://tq02y7vkhabf" path="res://minijeux/vending-machine/chiffres/Chiffres-7.wav" id="13_34ya7"]
[ext_resource type="AudioStream" uid="uid://c4s1wsgi265qu" path="res://minijeux/vending-machine/chiffres/Chiffres-8.wav" id="14_6hfdp"]
[ext_resource type="AudioStream" uid="uid://bytxf3wkd3pjg" path="res://minijeux/vending-machine/chiffres/Chiffres-9.wav" id="15_xpyc2"]
[ext_resource type="AudioStream" uid="uid://blui7cy1r2e0j" path="res://minijeux/vending-machine/chiffres/effacer.wav" id="16_yylxx"]
[ext_resource type="AudioStream" uid="uid://cc1f0g6vuj1mq" path="res://minijeux/vending-machine/chiffres/valider.wav" id="17_trghe"]

[sub_resource type="LabelSettings" id="LabelSettings_5b50y"]

[sub_resource type="LabelSettings" id="LabelSettings_lb8ce"]
font = ExtResource("3_4hr0v")
font_size = 45
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_yylxx"]
font = ExtResource("3_4hr0v")
font_size = 30
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_trghe"]
font_size = 22
font_color = Color(0, 0, 0, 1)

[node name="Vending-machine" type="Node2D"]
script = ExtResource("1_trghe")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0
script = ExtResource("1_5b50y")

[node name="VendingMachine" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_lb8ce")
expand_mode = 3
stretch_mode = 5

[node name="Buttons_numbers" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button1" type="Button" parent="Control/Buttons_numbers"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5954861
anchor_top = 0.3117284
anchor_right = 0.6493056
anchor_bottom = 0.39814815
metadata/_edit_use_anchors_ = true

[node name="Button2" type="Button" parent="Control/Buttons_numbers"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.65625
anchor_top = 0.3117284
anchor_right = 0.7100694
anchor_bottom = 0.39814815
metadata/_edit_use_anchors_ = true

[node name="Button3" type="Button" parent="Control/Buttons_numbers"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.7161458
anchor_top = 0.3117284
anchor_right = 0.7699653
anchor_bottom = 0.39814815
metadata/_edit_use_anchors_ = true

[node name="Button4" type="Button" parent="Control/Buttons_numbers"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5954861
anchor_top = 0.42746913
anchor_right = 0.6493056
anchor_bottom = 0.5138889
metadata/_edit_use_anchors_ = true

[node name="Button5" type="Button" parent="Control/Buttons_numbers"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.65625
anchor_top = 0.42746913
anchor_right = 0.7100694
anchor_bottom = 0.5138889
metadata/_edit_use_anchors_ = true

[node name="Button6" type="Button" parent="Control/Buttons_numbers"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.7161458
anchor_top = 0.42746913
anchor_right = 0.7699653
anchor_bottom = 0.5138889
metadata/_edit_use_anchors_ = true

[node name="Button7" type="Button" parent="Control/Buttons_numbers"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5954861
anchor_top = 0.5462963
anchor_right = 0.6493056
anchor_bottom = 0.63271606
metadata/_edit_use_anchors_ = true

[node name="Button8" type="Button" parent="Control/Buttons_numbers"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.65625
anchor_top = 0.5462963
anchor_right = 0.7100694
anchor_bottom = 0.63271606
metadata/_edit_use_anchors_ = true

[node name="Button9" type="Button" parent="Control/Buttons_numbers"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.7161458
anchor_top = 0.5462963
anchor_right = 0.7699653
anchor_bottom = 0.63271606
metadata/_edit_use_anchors_ = true

[node name="Button0" type="Button" parent="Control/Buttons_numbers"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.6571181
anchor_top = 0.6574074
anchor_right = 0.7109375
anchor_bottom = 0.74382716
metadata/_edit_use_anchors_ = true

[node name="affichage" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.6006944
anchor_top = 0.20216049
anchor_right = 0.7640764
anchor_bottom = 0.28990126
offset_right = -0.21600342
offset_bottom = 0.14398193
label_settings = SubResource("LabelSettings_5b50y")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="postit" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2411552
anchor_top = 0.63888335
anchor_right = 0.37493727
anchor_bottom = 0.7256986
offset_right = 36.056152
offset_bottom = 23.0
rotation = -0.37699112
label_settings = SubResource("LabelSettings_lb8ce")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="alphabet" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.470132
anchor_top = 0.05293828
anchor_right = 0.50818753
anchor_bottom = 0.3177778
offset_left = 0.40795898
offset_top = -0.30400467
offset_right = -0.43200684
offset_bottom = 0.07998657
text = "0
1
2
3
4"
label_settings = SubResource("LabelSettings_yylxx")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="alphabetcorresp" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.501382
anchor_top = 0.05756791
anchor_right = 0.52294445
anchor_bottom = 0.29154325
offset_left = 0.40795898
offset_top = -0.30400467
offset_right = -0.43200684
offset_bottom = 15.079971
text = "0
1
2
3
4"
label_settings = SubResource("LabelSettings_trghe")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="alphabet2" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.517875
anchor_top = 0.04213581
anchor_right = 0.56547916
anchor_bottom = 0.30697536
offset_left = 0.40795898
offset_top = -0.30400467
offset_right = -0.43200684
offset_bottom = 0.07998657
text = "5
6
7
8
9"
label_settings = SubResource("LabelSettings_yylxx")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="alphabet2corresp" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5543334
anchor_top = 0.04830865
anchor_right = 0.57676387
anchor_bottom = 0.3054321
offset_left = 0.40795898
offset_top = -0.30400467
offset_right = -0.43200684
offset_bottom = 0.07998657
text = "5
6
7
8
9"
label_settings = SubResource("LabelSettings_trghe")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="ButtonNO" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.7161458
anchor_top = 0.6574074
anchor_right = 0.7699653
anchor_bottom = 0.7438271
metadata/_edit_use_anchors_ = true

[node name="ButtonYES" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5963542
anchor_top = 0.6558642
anchor_right = 0.6501736
anchor_bottom = 0.74228394
metadata/_edit_use_anchors_ = true

[node name="drink" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource("3_5b50y")

[node name="erreur" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource("4_d3eid")

[node name="Chiffres0" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource("6_wt08n")

[node name="Chiffres1" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource("7_45jr6")

[node name="Chiffres2" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource("8_yylxx")

[node name="Chiffres3" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource("9_trghe")

[node name="Chiffres4" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource("10_hkba5")

[node name="Chiffres5" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource("11_623a3")

[node name="Chiffres6" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource("12_awdpl")

[node name="Chiffres7" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource("13_34ya7")

[node name="Chiffres8" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource("14_6hfdp")

[node name="Chiffres9" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource("15_xpyc2")

[node name="Effacer" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource("16_yylxx")

[node name="Valider" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource("17_trghe")

[connection signal="pressed" from="Control/ButtonNO" to="." method="_on_button_no_pressed"]
[connection signal="pressed" from="Control/ButtonYES" to="." method="_on_button_yes_pressed"]
